# multi-llm-client

./: .env.example  .gitignore  README.md  pyproject.toml
src/: schema.py
src/llm_client/: __init__.py  api.py  cli.py  client.py  config.py  exceptions.py  schema.py
src/llm_client/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  registry.py
tests/: conftest.py  test_anthropic.py  test_api.py  test_client.py  test_gemini.py  test_openai.py
